# stage_v_dm

./: .gitignore
sidm_dsigma/: .pre-commit-config.yaml  AGENTS.md  PLAN.md  README.md  SPEC.md  pyproject.toml
sidm_dsigma/docs/: adhikari2025_digest.md  cluster1_z0p1_ensemble_config.yaml  cluster1_z0p5_ensemble_config.yaml  cluster2_z0p1_ensemble_config.yaml  cluster2_z0p5_ensemble_config.yaml  cluster_ensemble_config.yaml  dwarf1_z0p05_ensemble_config.yaml  dwarf1_z0p2_ensemble_config.yaml  dwarf2_z0p05_ensemble_config.yaml  dwarf2_z0p2_ensemble_config.yaml  dwarf_ensemble_config.yaml  ensemble-spec.md  halo-ensemble-implementation-research.md  lessons.md  sidm_dsigma_phase-1.md  sidm_dsigma_phase-2.md  sidm_dsigma_phase-3.md  todo.md
sidm_dsigma/notebooks/: 01_dwarf_cluster_forecast.ipynb
sidm_dsigma/outputs/: INVENTORY.md
sidm_dsigma/outputs/figures/: CAPTION.md
sidm_dsigma/outputs/tables/: benchmark_summary.csv  cdm_engine_convergence_parametric_vs_colossus_dk14.csv  cluster_ensemble_delta_chi2_summary.csv  (+24 more)
sidm_dsigma/scripts/: build_tier3_redshift_overlay_summaries.py  run_benchmarks.py  run_cdm_engine_convergence_check.py  run_ensemble_forecast.py  run_precision_sweep.py  run_reference_crosscheck.py
sidm_dsigma/src/: parametricSIDM.py
sidm_dsigma/tests/: test_ensemble.py  test_ensemble_hmf.py  test_ensemble_shmr.py  test_ensemble_yaml.py  test_forecast_ensemble.py  test_outer_corrections.py  test_outer_profiles.py  test_precision_sweep.py  test_profiles_sanity.py  test_projection_nfw.py  test_reference_validation.py  test_stacking.py  test_stitch.py
(+66 files in other folders)
